// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Balance should render correctly with a fiat balance 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 18,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 24,
        "paddingHorizontal": 15,
        "paddingVertical": 4,
      }
    }
  >
    Your balance
  </Text>
  <TouchableOpacity
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
    testID="asset-DAI"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "https://static.cx.metamask.io/api/v1/tokenIcons/1/0x6b175474e89094c44da98b954eedeac495271d0f.png",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 16,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001A",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "alignSelf": "center",
          "color": "#141618",
          "flex": 1,
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "justifyContent": "center",
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginLeft": 20,
        }
      }
    >
      Dai Stablecoin
    </Text>
    <View
      style={
        {
          "alignItems": "flex-end",
          "alignSelf": "flex-end",
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
        testID="fiat-balance-test-id"
      >
        456
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#6a737d",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 0,
            "textTransform": "uppercase",
          }
        }
        testID="main-balance-test-id"
      >
        123
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Balance should render correctly without a fiat balance 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#141618",
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 18,
        "fontWeight": "700",
        "letterSpacing": 0,
        "lineHeight": 24,
        "paddingHorizontal": 15,
        "paddingVertical": 4,
      }
    }
  >
    Your balance
  </Text>
  <TouchableOpacity
    onLongPress={[Function]}
    onPress={[Function]}
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 15,
        "paddingVertical": 10,
      }
    }
    testID="asset-DAI"
  >
    <View
      onLayout={[Function]}
      style={
        {
          "alignSelf": "center",
          "position": "relative",
        }
      }
      testID="badge-wrapper-badge"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 16,
              "height": 32,
              "overflow": "hidden",
              "width": 32,
            }
          }
        >
          <Image
            onError={[Function]}
            resizeMode="contain"
            source={
              {
                "uri": "https://static.cx.metamask.io/api/v1/tokenIcons/1/0x6b175474e89094c44da98b954eedeac495271d0f.png",
              }
            }
            style={
              {
                "flex": 1,
                "height": undefined,
                "width": undefined,
              }
            }
            testID="token-avatar-image"
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "aspectRatio": 1,
            "height": 0,
            "justifyContent": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": 0,
              },
              {
                "translateY": -0,
              },
            ],
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignItems": "center",
              "aspectRatio": 1,
              "height": "50%",
              "justifyContent": "center",
              "maxHeight": 24,
              "minHeight": 8,
              "opacity": 0,
            }
          }
          testID="badgenetwork"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderColor": "#ffffff",
                "borderRadius": 16,
                "borderWidth": 2,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "shadowColor": "#0000001A",
                "shadowOffset": {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 1,
                "shadowRadius": 4,
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
                "width": 32,
              }
            }
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 32,
                  "width": 32,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "alignSelf": "center",
          "color": "#141618",
          "flex": 1,
          "fontFamily": "EuclidCircularB-Medium",
          "fontSize": 16,
          "fontWeight": "500",
          "justifyContent": "center",
          "letterSpacing": 0,
          "lineHeight": 24,
          "marginLeft": 20,
        }
      }
    >
      Dai Stablecoin
    </Text>
    <View
      style={
        {
          "alignItems": "flex-end",
          "alignSelf": "flex-end",
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#6a737d",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "paddingHorizontal": 0,
            "textTransform": "uppercase",
          }
        }
        testID="main-balance-test-id"
      >
        123
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
